<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:fillViewport="true"
    tools:context=".WakalaRegistrationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/msajili_wakala"
            android:textSize="18sp"
            android:textColor="@color/teal_700"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/wakala_ID_No."
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:gravity="center_horizontal"
            android:ems="10"
            android:hint="@string/namba_ya_kitambulisho"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="10"
            android:maxLines="1"
            tools:text="@string/namba_ya_kitambulisho" />

        <EditText
            android:id="@+id/wakala_f_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:gravity="center_horizontal"
            android:ems="10"
            android:hint="@string/jina_la_kwanza"
            android:importantForAutofill="no"
            android:inputType="textCapWords"
            tools:text="@string/jina_la_kwanza"
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/wakala_m_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:gravity="center_horizontal"
            android:ems="10"
            android:hint="@string/jina_la_kati"
            android:importantForAutofill="no"
            android:inputType="textCapWords"
            tools:text="@string/jina_la_kati"
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/wakala_l_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:gravity="center_horizontal"
            android:ems="10"
            android:hint="@string/jina_la_ukoo"
            android:importantForAutofill="no"
            android:inputType="textCapWords"
            tools:text="@string/jina_la_ukoo"
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/wakala_birthdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:gravity="center_horizontal"
            android:ems="10"
            android:hint="@string/tarehe_ya_kuzaliwa"
            android:importantForAutofill="no"
            android:inputType="date"
            tools:text="@string/tarehe_ya_kuzaliwa" />

        <EditText
            android:id="@+id/wakala_licence_No."
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:gravity="center_horizontal"
            android:ems="10"
            android:hint="@string/namba_ya_leseni"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="10"
            android:maxLines="1"
            tools:text="@string/namba_ya_leseni" />

        <EditText
            android:id="@+id/wakala_SIM_No."
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:gravity="center_horizontal"
            android:ems="10"
            android:hint="@string/namba_ya_laini"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="10"
            android:maxLines="1"
            tools:text="@string/namba_ya_laini" />

        <EditText
            android:id="@+id/wakala_code_No."
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:gravity="center_horizontal"
            android:ems="10"
            android:hint="@string/code_ya_wakala"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="6"
            android:maxLines="1"
            tools:text="@string/code_ya_wakala" />

        <EditText
            android:id="@+id/wakala_TIN_No."
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:gravity="center_horizontal"
            android:ems="10"
            android:hint="@string/namba_ya_tin"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="6"
            android:maxLines="1"
            tools:text="@string/namba_ya_tin" />

        <EditText
            android:id="@+id/wakala_business_region"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:gravity="center_horizontal"
            android:ems="10"
            android:hint="@string/mkoa_wa_biashara"
            android:importantForAutofill="no"
            android:inputType="textCapWords"
            tools:text="@string/mkoa_wa_biashara" />

        <ProgressBar
            android:id="@+id/wakala_register_loading"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <Button
            android:id="@+id/wakala_register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:backgroundTint="@color/teal_200"
            android:textColor="#ffff"
            android:textSize="18sp"
            android:text="@string/sajili"/>

    </LinearLayout>

</ScrollView>